# scrap-magalu-thief

./: .env.sample  Makefile  main.py  pyproject.toml
app/: settings.py
app/infra/playwright/: get_page_dynamic_content.py
app/infra/postgres/: pg_upsert.py
app/infra/rabbitmq/: rabbitmq_receiver.py
app/infra/selectolax/: magalu_item.py  magalu_parser.py
app/playwright/: get_page_dynamic_content.py
app/postgres/: pg_upsert.py
app/rabbitmq/: rabbitmq_receiver.py
app/scraper/: magalu_scraper.py
app/selectolax/: magalu_item.py  magalu_parser.py
