[tool.poetry]
name = "scrap-magalu-item"
version = "0.1.0"
description = "Magalu Item"
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [
{include = "*.py"},
{include = "app/**/*.py"}
]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.38.0"
selectolax = "^0.3.16"
pydantic = "^2.3.0"
pika = "^1.3.2"
python-dotenv = "^1.0.0"
psycopg = "^3.1.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
